# tts_uk

./: CITATION.cff  README.md  example.py  justfile  pyproject.toml
.github/workflows/: ci.yml  snyk-python.yml  test.yaml
assets/: tts-uk.ipynb
radtts_uk/: attribute_prediction_model.py  audio_processing.py  common.py  config.json  data.py  inference.py  radtts.py  transformer.py
tts_uk/: inference.py
vocos/: feature_extractors.py  models.py  modules.py  pretrained.py
